chore: fixed typo in ci.yaml

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - develop
   pull_request:
     branches:
       - main
@@ -15,42 +16,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install npm
-        uses: 
-        with:
-          node-version
-      
-      - name: Install
-        run: npm i
-      
-      - name: Lint
-        run: npm run lint
-  
-  typecheck:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Install npm
-        uses:
-      
       - name: Set node
         uses: actions/setup-node@v3
         with:
-          node-version:
+          node-version: 16.x
 
       - name: Install
         run: npm i
-      
-      - name: Build
-        run: npm run build
-      
-      - name: Typecheck
-        run: npm run typecheck
 
-test: 
-  runs-on: ubuntu-latest
-
-  timeout-minutes: 30
-
-  strategy
+      - name: Lint
+        run: npm run lint
