--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Set node
         uses: actions/setup-node@v3
-        width:
+        with:
           node-version: 16.x
 
       - name: Install
@@ -57,7 +57,7 @@ jobs:
 
       - name: Set node
         uses: actions/setup-node@v3
-        width:
+        with:
           node-version: 16.x
 
       - name: Install
