--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"test:ci": "vitest --coverage",
 		"test:ui": "playwright test",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"lint:fix": "eslint . --fix",
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
@@ -40,12 +41,14 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"husky": "^8.0.2",
 		"jsdom": "^20.0.3",
+		"moment": "^2.29.4",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"sass": "^1.57.1",
 		"smui-theme": "^7.0.0-beta.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^2.9.2",
+		"tinyqueue": "^2.0.3",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
