--- a/package.json
+++ b/package.json
@@ -25,17 +25,30 @@
 		"@material/dom": "^14.0.0",
 		"@material/elevation": "^14.0.0",
 		"@playwright/test": "^1.28.1",
+		"@smui/banner": "^7.0.0-beta.0",
 		"@smui/button": "^7.0.0-beta.0",
+		"@smui/common": "^7.0.0-beta.0",
+		"@smui/dialog": "^7.0.0-beta.0",
 		"@smui/drawer": "^7.0.0-beta.0",
+		"@smui/form-field": "^7.0.0-beta.0",
 		"@smui/icon-button": "^7.0.0-beta.0",
 		"@smui/list": "^7.0.0-beta.0",
+		"@smui/menu": "^7.0.0-beta.0",
+		"@smui/select": "^7.0.0-beta.0",
+		"@smui/switch": "^7.0.0-beta.0",
+		"@smui/tab": "^7.0.0-beta.0",
+		"@smui/tab-bar": "^7.0.0-beta.0",
+		"@smui/textfield": "^7.0.0-beta.0",
 		"@smui/top-app-bar": "^7.0.0-beta.0",
 		"@sveltejs/adapter-auto": "^1.0.0",
+		"@sveltejs/adapter-static": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
 		"@testing-library/svelte": "^3.2.2",
+		"@types/uuid": "^9.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"@vitest/coverage-c8": "^0.26.2",
+		"dexie": "^3.2.2",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
@@ -44,6 +57,7 @@
 		"moment": "^2.29.4",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
+		"rxjs": "^7.8.0",
 		"sass": "^1.57.1",
 		"smui-theme": "^7.0.0-beta.0",
 		"svelte": "^3.54.0",
@@ -51,6 +65,7 @@
 		"tinyqueue": "^2.0.3",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
+		"uuid": "^9.0.0",
 		"vite": "^4.0.0",
 		"vitest": "^0.25.3"
 	},
